feat: add keyless product comparison
